--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,27 +3,29 @@
 	color: #ffbf00;
 	font-family: sans-serif;
 	font-style: italic;
+	text-shadow: 1px 1px 1px #aa21a1;
 }
 
 h1 {
 	text-align: center;
 	color: #ffffff;
+	background-color: #111111;
+	border: 2px solid #ffffff;
+
 }
 body {
 	background-image: url(../img/main.jpg);
 	width: 95%;
 	background-size: cover;
 }
-.container {
-	background-image: url(../img/tardis.png);
-	background-size: cover;
-	background-position: center;
-	display: grid;
-	grid-column: 1/3;
-	grid-template-column: 1fr 1fr;
-}
+
 .porte {
-	margin: 1% 20%;
+	background-image: url(../img/tardis.png) ;
+	background-attachment:fixed;
+	background-position: center;
+	background-size: cover;
+	margin-bottom: 1%;
+
 }
 li {
 	list-style: none;
@@ -32,6 +34,10 @@ li {
 nav {
 	display: flex;
 	justify-content: space-between;
+	position: sticky;
+	position: -webkit-sticky;
+	top : 4px;
+	background-image: url(../img/main.jpg)
 }
 
 nav img {
@@ -44,28 +50,56 @@ a {
 	text-decoration: none;
 }
 
-a *:hover{
-	color: #55c5aa;
-}
 
 a:hover{
 	color: #55ccaa;
 }
 
-h1 {
-	background-color: black;
-	border: 2px solid white;
-	margin: 2% 10%;
+a *:hover{
+	color: #55c5aa;
 }
 
 li, p{ 
 
-	background-color: rgba(176,190,197, 0.6);
-	color: #111111; }
+	text-shadow: 1px 1px 1px #111111;
+	color: #ffffff; 
+}
 
 form{
 	background-image:url(../img/tardis.jpg);
-	background-size: cover;
-	height: 7vw;
-	padding: 30%;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	padding-top: 35%;
+	vertical-align: center;
+	padding-bottom: 20%;
+	padding-left: 20%;
+	display: flex;
+	align-content: center;
+	text-align: center;
+	
+}
+
+input{ 
+	color: #333333;
+
+}
+button {
+	color: #333333;
+}
+
+.boot{ 
+	position: relative;
+	bottom: 1%;
+}
+
+span {
+	color: #aaaaaa;
+}
+
+h2 {
+	text-align: center;
+}
+ol {
+	margin: 0;
+	padding: 10px;
 }
