--- a/assets/css/styleindex.css
+++ b/assets/css/styleindex.css
@@ -2,13 +2,20 @@
 .porte {
 
 	display: grid;
-	grid-template-column: 1fr 1fr;
+	grid-template-columns: 1fr 1fr;
 	grid-column: 1/3;
-	grid-template-areas: "un deux"
+	grid-row: 1/5;
+	grid-template-areas: 
+						"h h"
+						"un deux"
 						"trois quatre"
 						"cinq six"
 						"sept huit";
 	
+}
+
+h1 { 
+	grid-area: h;
 }
 
 .un{ grid-area: "un";}
