--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 	font-family: sans-serif;
 	font-style: italic;
 	text-shadow: 1px 1px 1px #aa21a1;
+
 }
 
 h1 {
@@ -11,6 +12,7 @@ h1 {
 	color: #ffffff;
 	background-color: #111111;
 	border: 2px solid #ffffff;
+	margin: 1% 10%;
 
 }
 body {
@@ -19,12 +21,18 @@ body {
 	background-size: cover;
 }
 
+h2{
+	margin-top: 2px;
+	margin-bottom: 2px;
+}
 .porte {
 	background-image: url(../img/tardis.png) ;
 	background-attachment:fixed;
 	background-position: center;
 	background-size: cover;
 	margin-bottom: 1%;
+	margin-left: 4px;
+	padding: 0 30px;
 
 }
 li {
@@ -37,7 +45,8 @@ nav {
 	position: sticky;
 	position: -webkit-sticky;
 	top : 4px;
-	background-image: url(../img/main.jpg)
+	background-image: url(../img/main.jpg);
+
 }
 
 nav img {
@@ -63,20 +72,31 @@ li, p{
 
 	text-shadow: 1px 1px 1px #111111;
 	color: #ffffff; 
+	margin-bottom: 3px;
 }
 
-form{
+.formulaire{
 	background-image:url(../img/tardis.jpg);
 	background-size: 100%;
+	background-position: center;
 	background-repeat: no-repeat;
 	padding-top: 35%;
 	vertical-align: center;
 	padding-bottom: 20%;
-	padding-left: 20%;
+	padding-left: 25%;
 	display: flex;
 	align-content: center;
 	text-align: center;
 	
+}
+
+#mail {
+
+	color: rgb(0, 128, 0);
+	margin-left: 40%;
+}
+.commentaires {
+	margin-bottom: 5%;
 }
 
 input{ 
@@ -84,12 +104,21 @@ input{
 
 }
 button {
+	margin: 5%;
+	padding: 3px;
 	color: #333333;
+	border-radius: 50%;
 }
 
 .boot{ 
 	position: relative;
 	bottom: 1%;
+	display: flex;
+	justify-content: space-between;
+	position: sticky;
+	position: -webkit-sticky;
+	position-bottom: 4px;
+
 }
 
 span {
@@ -102,4 +131,27 @@ h2 {
 ol {
 	margin: 0;
 	padding: 10px;
+}
+
+@media screen and (min-width :528px){
+
+	.porte {
+		padding: 0 15%;
+		margin-right: 20px;
+	}
+
+	.formulaire {
+		padding-top: 15%;
+		padding-left: -15%;
+		padding-right: 0%;
+		font-size: 3em;
+		background-size: 80%;
+	}
+
+	input {
+		font-size:0.5em;
+	}
+	button {
+		font-size: 1em;
+	}
 }
